# m

./: .gitignore  README.md  pyproject.toml
docs/: RICH_TRAINING.md  TRAINING_VISUALIZATION.md
examples/: __init__.py  training_viz_examples.py
examples/geometric_signals/: README.md  __init__.py  datasets.py  deploy.py  evaluation.py  inference_demo.py  model_discovery.py  run_experiments.py  training.py  visualization.py
examples/geometric_signals/configs/: baseline_dense.yaml  large_moe.yaml  quick_test.yaml  rich_test.yaml  sinkhorn_moe.yaml  small_moe.yaml
examples/trajectory_3d/: README.md  __init__.py  datasets.py  deploy.py  evaluation.py  inference_demo.py  model_discovery.py  run_experiments.py  test_training.py  training.py  visualization.py
examples/trajectory_3d/configs/: large_3d_moe.yaml  quick_test_3d.yaml  small_3d_moe.yaml
m/: __init__.py  inference_server.py  moe.py  rich_trainer_viz.py  training_viz.py
tests/: conftest.py  test_experts.py  test_geometric_signals_inference.py  test_inference.py  test_modern_components.py  test_moe_block.py  test_moe_integration.py  test_prefix_caching.py  test_rich_training.py  test_routers.py  test_training.py  test_training_viz.py  test_trajectory_3d.py
tools/debug/: debug_boundary.py  debug_cache_hits.py  debug_checkpoint.py  debug_exact_eval.py  debug_prefix_caching.py  debug_single_expert.py  debug_temperature.py
